# tam

./: .gitignore  CMakeLists.txt  README.md
include/tam/: error.h  tam.h
src/: CMakeLists.txt  main.c  tam.c
test/: gcd-call.tam  gcd-loop.tam  gcd-test.sh  gcd.tam
